@@ -3,6 +3,8 @@ ubuntu-image (0.8ubuntu1) UNRELEASED; urgency=medium
   * Fix snap creation.  (LP: #1631961)
   * Copy everything under <unpackdir>/image into <rootfs>/system-data
     except boot/.  (LP: #1632134)
+  * Optional --image-size command line option can be used to force the
+    resulting disk image to a larger than calculated size.  (LP: #1632085)
 
  -- Barry Warsaw <barry@ubuntu.com>  Mon, 10 Oct 2016 10:48:49 -0400
 
